	- addSubGroup now returns a boolean for success/failure.
	- '/manuaddsub' now correctly reports if it was able to add the sub group.
	- Allow negation to the * permission node when populating superperms.
	- Fix trying to modify an unmodifiable collection breaking superperms.
	- Fixed subgroups (I broke earlier).
	- Check for a null player object in the PlayerTeleportEvent.
	- Trap errors in fetching the mirrors map.
	- Fixed an infinite loop error when using '/manudel' on a logged in player. It caused setDefaultGroup to trigger a bukkit update when no GM User existed yet.
	- do not allow inherited permissions to negate higher perms.
	- Fixed a bug when pushing superperms in the wrong order.
	- Fix players retaining permissions when demoted.
	- Auto sort permissions on load to speed up population of superperms.
	- Negating a parent node after adding all nodes with * will now correctly remove all child nodes of that parent before populating superperms.
	  eg.
	      - '*'
	      - -vanish.*
	      - vanish.standard
	- Track the 'onPlayerChangeWorld' event as some teleports seem to not be triggering a world move.
	- Catch all errors in badly formatted groups.
	- Fix a bug with getWorldData return the main world data for all mirrors, instead of the worlds parent data.
	- Prevent getAllPlayersPermissions() processing a group more than once. Improves performance when using complex inheritance structures.
	- Fix world mirroring so it correctly creates data files and data sources for partially mirrored worlds.
	- Fixed world mirroring so it returns the correct data for the requested world.
	- Change Service registration to register WorldsHolder instead of AnjoPermissionsHandler. This is the correct entry point for all data.
	- Depreciate PlayerTeleportEvent, PlayerRespawnEvent and PlayerPortalEvent as it's all handled in PlayerChangedWorldEvent.
	  This also means we no longer update permissions before we change worlds.